# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  scene.dtd
src/: camera.h  hit.h  image.h  light.h  main.cpp  mat4.h  material.cpp  material.h  mesh.h  obj_utils.cpp  obj_utils.h  object.h  ray.h  scene.cpp  scene.h  scene_parser.cpp  scene_parser.h  sphere.h  stb_image_impl.cpp  stb_image_write_impl.cpp  surface.h  transform.h  triangle.h  vec.h  write_ppm.cpp  write_ppm.h
